--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-transformers==4.32.0
-datasets==2.10.1
-evaluate==0.4.0
-huggingface_hub==0.15.1
-scikit-learn==1.1.3
-numpy==1.24.2
+transformers
+datasets
+evaluate
+huggingface_hub
+scikit-learn
+numpy
